preprocessing by col

--- a/preprocessing/preprocessing.ipynb
+++ b/preprocessing/preprocessing.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as a dll could not be loaded.\n",
+      "Click <a href='https://aka.ms/kernelFailuresDllLoad'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -47,7 +57,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as a dll could not be loaded.\n",
+      "Click <a href='https://aka.ms/kernelFailuresDllLoad'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "def to_float(text):\n",
     "    try:\n",
@@ -119,7 +139,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as a dll could not be loaded.\n",
+      "Click <a href='https://aka.ms/kernelFailuresDllLoad'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "MinMax - Manual calculation\n",
@@ -201,7 +231,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as a dll could not be loaded.\n",
+      "Click <a href='https://aka.ms/kernelFailuresDllLoad'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "# Month, C, user_type, A, internet_browser \n",
     "\n",
@@ -226,7 +266,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as a dll could not be loaded.\n",
+      "Click <a href='https://aka.ms/kernelFailuresDllLoad'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "# How do we identify?"
    ]
@@ -242,7 +292,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as a dll could not be loaded.\n",
+      "Click <a href='https://aka.ms/kernelFailuresDllLoad'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "def PCA_method(df_in, n):\n",
     "    # initialize PCA\n",
@@ -277,7 +337,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as a dll could not be loaded.\n",
+      "Click <a href='https://aka.ms/kernelFailuresDllLoad'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "# MinMax Scaling\n",
@@ -301,7 +371,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as a dll could not be loaded.\n",
+      "Click <a href='https://aka.ms/kernelFailuresDllLoad'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "#pass"
    ]
