--- a/exploration/explore.ipynb
+++ b/exploration/explore.ipynb
@@ -946,7 +946,7 @@
    "source": [
     "#### admin_page_duration\n",
     "Duration of time spent on administrative pages.\n",
-    "As we can see, most of the users don't visit administrative pages, maybe because most of the users aren't admins. Those who are (there are approximately 200), visit them a lot (250-500 times)."
+    "As we can see, most of the users don't visit administrative pages. Those who do (there are approximately 200), visit them a lot (250-500 times)."
    ]
   },
   {
@@ -1615,10 +1615,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "4b11f8d247a7bf8c0a6f4d56e0a0da45aab48acb62ce74e55bc85a3a7cda7f4b"
+   "hash": "c2b4c4a7e7917a5ab4cfeacc425ce78a2971770dec29d8f84d0a093340a56657"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.7.3 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -1632,7 +1632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   },
   "orig_nbformat": 4
  },
