Added random_state=0 to all functions which have generation of random numbers.

--- a/final/Final_Project_ML_group7.ipynb
+++ b/final/Final_Project_ML_group7.ipynb
@@ -2245,8 +2245,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_validate, y_train, y_validate = train_test_split(X, y)\n",
-    "X_pca_train, X_pca_validate, y_pca_train, y_pca_validate = train_test_split(X_pca, y_pca)"
+    "X_train, X_validate, y_train, y_validate = train_test_split(X, y, random_state=0)\n",
+    "X_pca_train, X_pca_validate, y_pca_train, y_pca_validate = train_test_split(X_pca, y_pca, random_state=0)"
    ]
   },
   {
@@ -2285,8 +2285,8 @@
     "  'solver': ['liblinear'],\n",
     "  'max_iter': [1000],\n",
     "} \n",
-    "lgr_gs_regular = GridSearchCV(LogisticRegression(), lgrParametersOptions, scoring='roc_auc', verbose=1)\n",
-    "lgr_gs_pca = GridSearchCV(LogisticRegression(), lgrParametersOptions, scoring='roc_auc', verbose=1)\n",
+    "lgr_gs_regular = GridSearchCV(LogisticRegression(random_state=0), lgrParametersOptions, scoring='roc_auc', verbose=1)\n",
+    "lgr_gs_pca = GridSearchCV(LogisticRegression(random_state=0), lgrParametersOptions, scoring='roc_auc', verbose=1)\n",
     "lgr_gs_regular.fit(X_train, y_train)\n",
     "lgr_gs_pca.fit(X_pca_train, y_pca_train)\n",
     "print('-'*30)\n",
@@ -2338,8 +2338,8 @@
     "  'random_state': [0],\n",
     "}\n",
     "\n",
-    "ann_gs_regular = GridSearchCV(MLPClassifier(), annParametersOptions, scoring='roc_auc', verbose=1)\n",
-    "ann_gs_pca = GridSearchCV(MLPClassifier(), annParametersOptions, scoring='roc_auc', verbose=1)\n",
+    "ann_gs_regular = GridSearchCV(MLPClassifier(random_state=0), annParametersOptions, scoring='roc_auc', verbose=1)\n",
+    "ann_gs_pca = GridSearchCV(MLPClassifier(random_state=0), annParametersOptions, scoring='roc_auc', verbose=1)\n",
     "\n",
     "ann_gs_regular.fit(X_train, y_train)\n",
     "ann_gs_pca.fit(X_pca_train, y_pca_train)\n",
@@ -2379,8 +2379,8 @@
     "  'max_features': [None, 'sqrt', 'log2']\n",
     "}\n",
     "\n",
-    "dt_gs_regular = GridSearchCV(DecisionTreeClassifier(), dtParametersOptions, scoring='roc_auc', verbose=1)\n",
-    "dt_gs_pca = GridSearchCV(DecisionTreeClassifier(), dtParametersOptions, scoring='roc_auc', verbose=1)\n",
+    "dt_gs_regular = GridSearchCV(DecisionTreeClassifier(random_state=0), dtParametersOptions, scoring='roc_auc', verbose=1)\n",
+    "dt_gs_pca = GridSearchCV(DecisionTreeClassifier(random_state=0), dtParametersOptions, scoring='roc_auc', verbose=1)\n",
     "\n",
     "dt_gs_regular.fit(X_train, y_train)\n",
     "dt_gs_pca.fit(X_pca_train, y_pca_train)\n",
@@ -2420,8 +2420,8 @@
     "  'max_features': ['sqrt', 'log2']\n",
     "}\n",
     "\n",
-    "rf_gs_regular = GridSearchCV(RandomForestClassifier(), rfParametersOptions, scoring='roc_auc', verbose=1)\n",
-    "rf_gs_pca = GridSearchCV(RandomForestClassifier(), rfParametersOptions, scoring='roc_auc', verbose=1)\n",
+    "rf_gs_regular = GridSearchCV(RandomForestClassifier(random_state=0), rfParametersOptions, scoring='roc_auc', verbose=1)\n",
+    "rf_gs_pca = GridSearchCV(RandomForestClassifier(random_state=0), rfParametersOptions, scoring='roc_auc', verbose=1)\n",
     "\n",
     "rf_gs_regular.fit(X_train, y_train)\n",
     "rf_gs_pca.fit(X_pca_train, y_pca_train)\n",
@@ -2566,7 +2566,7 @@
    "source": [
     "def KfoldPlot(X, y, clf, k, ax, clfname, type, color='r'):\n",
     "    # # initializes the KFOLD\n",
-    "    kf = KFold(n_splits=k, random_state=None, shuffle=False) \n",
+    "    kf = KFold(n_splits=k, random_state=0) \n",
     "\n",
     "    # sets an mean tpr and fpr.\n",
     "    mean_tpr = np.zeros(200) \n",
@@ -2642,17 +2642,17 @@
    ],
    "source": [
     "# Create the models:\n",
-    "lgr_clf_regular = LogisticRegression().set_params(**lgr_gs_regular.best_params_)\n",
-    "lgr_clf_pca = LogisticRegression().set_params(**lgr_gs_pca.best_params_)\n",
+    "lgr_clf_regular = LogisticRegression(random_state=0).set_params(**lgr_gs_regular.best_params_)\n",
+    "lgr_clf_pca = LogisticRegression(random_state=0).set_params(**lgr_gs_pca.best_params_)\n",
     "\n",
-    "ann_clf_regular = MLPClassifier().set_params(**ann_gs_regular.best_params_)\n",
-    "ann_clf_pca = MLPClassifier().set_params(**ann_gs_pca.best_params_)\n",
+    "ann_clf_regular = MLPClassifier(random_state=0).set_params(**ann_gs_regular.best_params_)\n",
+    "ann_clf_pca = MLPClassifier(random_state=0).set_params(**ann_gs_pca.best_params_)\n",
     "\n",
-    "dt_clf_regular = DecisionTreeClassifier().set_params(**dt_gs_regular.best_params_)\n",
-    "dt_clf_pca = DecisionTreeClassifier().set_params(**dt_gs_pca.best_params_)\n",
+    "dt_clf_regular = DecisionTreeClassifier(random_state=0).set_params(**dt_gs_regular.best_params_)\n",
+    "dt_clf_pca = DecisionTreeClassifier(random_state=0).set_params(**dt_gs_pca.best_params_)\n",
     "\n",
-    "rf_clf_regular = RandomForestClassifier().set_params(**rf_gs_regular.best_params_)\n",
-    "rf_clf_pca = RandomForestClassifier().set_params(**rf_gs_pca.best_params_)\n",
+    "rf_clf_regular = RandomForestClassifier(random_state=0).set_params(**rf_gs_regular.best_params_)\n",
+    "rf_clf_pca = RandomForestClassifier(random_state=0).set_params(**rf_gs_pca.best_params_)\n",
     "\n",
     "\n",
     "models = [\n",
