--- a/final/Project_ML_group7.ipynb
+++ b/final/Project_ML_group7.ipynb
@@ -2789,7 +2789,7 @@
    "metadata": {},
    "source": [
     "The task is to build a confusion matrix for one of the models & explain what each cell means.\n",
-    "For it we will use our LogisticRegression model:"
+    "For it we will use our ANN model:"
    ]
   },
   {
@@ -2863,7 +2863,7 @@
     "\n",
     "The bottom right cell is TP - The amount of times the model predicted there won't be a purchase and there wasn't.\n",
     "\n",
-    "Our model got an 91% percent of guessing correctly on the validate data, which is okay, but we can see it has a bigger chance of getting a FN than a TP, which means we are missing more purchases than we actually may have."
+    "Our model got an 90% percent of guessing correctly on the validate data, which is okay, but we can see it has a bigger chance of getting a FN than a TP, which means we are missing more purchases than we actually may have."
    ]
   },
   {
@@ -3276,7 +3276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, when we know that the \"Random Forest\" model is the best, we will do the preprocessing on the test set."
+    "Now, when we know that the \"ANN\" model is the best, we will do the preprocessing on the test set."
    ]
   },
   {
